<resources>
    <string name="app_name">THSR App</string>
    <string name="title_activity_maps">THSR Map</string>

    <!--  map fragment  -->
    <string name="hsr_station">高鐵站</string>
    <string name="origin_station">起點站</string>
    <string name="destination_station">終點站</string>
    <string name="search_station">站點搜尋</string>
    <string name="search_path">路線規劃搜尋</string>

    <!--  station menu  -->
    <string-array name="menu">
        <item>站名</item>
        <item>設定成起點</item>
        <item>設定成終點</item>
        <item>附近餐廳</item>
        <item>取消</item>
    </string-array>

    <string name="station_name">站名</string>
    <string name="set_as_origin">設定成起點</string>
    <string name="set_as_destination">設定成終點</string>
    <string name="near_restaurant">附近餐廳</string>
    <string name="cancel">取消</string>
    <string name="station_address">高鐵站地址</string>

    <!--  path fragment  -->
    <string name="train_no">車次</string>
    <string name="departure_time">發車時間</string>
    <string name="arrival_time">到站時間</string>
    <string name="duration">車程</string>
    <string name="north">北上</string>
    <string name="south">南下</string>

    <!--  stop time fragment  -->
    <string name="alone_the_way">沿途停靠</string>
    <string name="expected_departure_time">表定發車</string>
    <string name="timetable">時刻表</string>

    <!-- station fragment -->
    <string name="station_search_hint">請輸入站點名稱或地址</string>

    <!--  restaurant fragment  -->
    <string name="restaurant_name">餐廳名稱</string>
    <string name="restaurant_address">餐廳地址</string>
    <string name="restaurant_distance">距離</string>
    <string name="restaurant_km">公里</string>
    <string name="restaurant_rating">評價</string>
    <string name="restaurant_review">則評論</string>

    <!--  dialog  -->
    <string name="retry">重試</string>
    <string name="loading">讀取中</string>

</resources>