<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3">

            <ProgressBar
                android:id="@+id/pg_img_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp" />

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="matrix"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/tv_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/restaurant_address" />

            <TextView
                android:id="@+id/tv_restaurant_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/restaurant_distance" />

            <TextView
                android:id="@+id/tv_restaurant_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/restaurant_rating" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="1dp"
        android:background="@color/white" />

</LinearLayout>